--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "test-cw": "jest --coverage --watchAll"
   },
   "dependencies": {
-    "@supabase/auth-ui-react": "0.4.7",
-    "@supabase/auth-ui-shared": "0.1.8",
-    "@supabase/supabase-js": "2.76.1",
     "@tailwindcss/vite": "4.1.16",
+    "firebase": "12.4.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "tailwindcss": "4.1.16"
