--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "firebase": "12.4.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "tailwindcss": "4.1.16"
+    "react-router-dom": "7.9.4",
+    "tailwindcss": "4.1.16",
+    "universal-cookie": "8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "9.36.0",
