feat: installed redux/toolkit and created store and hooks files in app folder

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test-cw": "jest --coverage --watchAll"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.9.2",
     "@tailwindcss/vite": "4.1.16",
     "firebase": "12.4.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-redux": "9.2.0",
     "react-router-dom": "7.9.4",
     "tailwindcss": "4.1.16",
     "universal-cookie": "8.0.1"
