feat: created functional chat and usechat

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET_HERE
 VITE_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID_HERE
 VITE_FIREBASE_APP_ID=YOUR_APP_ID_HERE
 VITE_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID_HERE
+VITE_FIREBASE_DB_COLLECTION=YOUR_COLLECTION_NAME_HERE
