--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.1.1",
     "react-redux": "9.2.0",
     "react-router-dom": "7.9.4",
+    "react-textarea-autosize": "8.5.9",
     "tailwindcss": "4.1.16",
     "universal-cookie": "8.0.1"
   },
