--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "9.2.0",
     "react-router-dom": "7.9.4",
     "react-textarea-autosize": "8.5.9",
+    "redux-persist": "6.0.0",
     "tailwindcss": "4.1.16",
     "universal-cookie": "8.0.1"
   },
