--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ VITE_FIREBASE_MEASUREMENT_ID=YOUR_MEASUREMENT_ID_HERE
 
 VITE_FIREBASE_DB_COLLECTION_USERS=your-collection-name-here
 VITE_FIREBASE_DB_COLLECTION_MESSAGES=your-collection-name-here
+
+VITE_GOOGLE_BOOKS_API_URL=YOUR_GOOGLE_BOOKS_API_HERE
