feat: configuring sentry...

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ VITE_FIREBASE_DB_COLLECTION_USERNAMES=your-collection-name-here
 VITE_FIREBASE_DB_COLLECTION_MESSAGES=your-collection-name-here
 
 VITE_GOOGLE_BOOKS_API_URL=YOUR_GOOGLE_BOOKS_API_HERE
+
+VITE_SENTRY_SDK_KEY=YOUR_SENTRY_SDK_KEY_HERE
