--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "2.9.2",
     "@sentry/react": "10.23.0",
+    "@sentry/vite-plugin": "^4.6.0",
     "@tailwindcss/vite": "4.1.16",
     "axios": "1.13.1",
     "firebase": "12.4.0",
